# rpi-version

./: .gitignore  .travis.yml  Dockerfile  README.md  deploy.bash  deploy.sh  pyproject.toml  renovate.json  rpi-version.py  rpi.json  tox.ini
.github/: pip.yaml
.github/workflows/: github-workflow.yaml  pythonpackage.yml
src/rpi_version/: __init__.py  rpi.json  rpi_version.py
tests/: rpi.json  test_algorithm.py
