[tool.poetry]
name = "rpi_version"
version = "1.1.1"
description = "Gives the exact version of your rpi"
authors = ["Tigran Tch <nargitinthenight@gmail.com>"]

[tool.poetry.dependencies]
python = "~2.7 || ^3.5"
requests = {version = "^2", python = "~2.7 || ^3.5"}
lxml = {version = "^4", python = "~2.7 || ^3.5"}

[tool.poetry.dev-dependencies]
pytest = {version = "^4", python = "~2.7 || ^3.5"}


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"