[tool.poetry]
name = "rpi-version"
version = "1.1.1"
description = "Gives the exact version of your rpi"
authors = ["Tigran Tch <nargitinthenight@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.5"
requests = "~2"
lxml = "~4"

[tool.poetry.dev-dependencies]
pytest = "~5"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"